charts/templates/haproxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:2.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg  # Монтируем конкретный файл
              subPath: haproxy.cfg  # Указываем подфайл внутри ConfigMap
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config  # ConfigMap с haproxy.cfg
