charts/templates/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-shards
spec:
  serviceName: "postgres"
  replicas: 2  # Два Pod-а для шардинга, один под для реплики
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        args:
        - "postgres"
        - "-c"
        - "wal_level=logical"
        resources:
          limits:
             memory: "200Mi"
             cpu: "200m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
