charts/templates/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
spec:
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      #nodePort: 30432
  type: ClusterIP
