charts/templates/postgres-replica-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-replica
spec:
  selector:
    app: postgres-replica
  ports:
    - name: postgresql  
      protocol: TCP  
      port: 5432       
      targetPort: 5432
  type: ClusterIP
