charts/templates/postgres-shards-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: postgresql  
      protocol: TCP  
      port: 5432       
      targetPort: 5432
  type: ClusterIP
